# Engram

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  context-graph-hld.docx  context-graph-whitepaper.docx  demo-video-presentation.jsx  demo-video-script.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
demo/frontend/: .env.example  Engram_Competitive_Analysis.docx  Engram_Front_End_Shell_PRD.docx  FEATURE_WALKTHROUGH.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
demo/orchestrator/: app.py  chat.py  context_client.py  llm.py  models.py  requirements.txt  scenarios.py  simulate.py
docker/: Dockerfile.api  Dockerfile.orchestrator  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml
docker/neo4j/: constraints.cypher  init.sh
docker/redis/: redis.conf
docs/: adr-guide.md  architecture-review.md  autoresearch-blog-post.md  competitive-analysis.md  engram-competitive-analysis.pptx  feature-breakdown.md  feature-showcase.md  platform-readiness-gap-analysis.md  retrieval-improvement-plan.md  tech-debt-competitor-capabilities.md
docs/adr/: 0001-traceability-first-context-graph.md  0002-service-stack-python-fastapi.md  0003-dual-store-postgres-neo4j.md  0004-event-ledger-and-idempotent-ingestion.md  0005-graph-projection-and-replay-worker.md  0006-context-query-and-lineage-api.md  0007-memory-tier-architecture.md  0008-memory-consolidation-and-decay.md  0009-multi-graph-schema-for-memory.md  0010-redis-event-store.md  0011-ontological-foundation.md  0012-user-personalization-ontology.md  0013-knowledge-extraction-pipeline.md  0014-archival-lifecycle-management.md  0015-sdk-and-integration-architecture.md  0016-security-architecture.md  0017-observability-architecture.md  0018-billion-scale-graph-architecture.md  review-analysis-api-layer.md  review-analysis-data-layer.md  review-analysis-foundations.md  review-summary.md
docs/constitution/: coding-standards.md  handoff-protocol.md  phase-plan.md  testing-strategy.md
docs/handoffs/: frontend-backend-integration.md  phase-0-neo4j.md  phase-0-redis.md  phase-1-complete.md  phase-2-complete.md  phase-3-complete.md  phase-4-complete.md  phase-5-complete.md
docs/research/: adr001-agent-frameworks.md  adr001-devils-advocate.md  adr001-industry-precedents.md  adr001-scale-analysis.md  cluster1-compliance.md  cluster1-context-graphs.md  cluster2-compliance.md  cluster2-memory-architectures.md  cluster3-compliance.md  cluster3-neuroscience-memory.md  consolidated-research.md  extraction-landscape.md  extraction-llm-techniques.md  extraction-ontology-guided.md  extraction-production-pipelines.md  llm-extraction-techniques.md  ontology-agents-graph-schema.md  ontology-cognitive-multigraph.md  ontology-discovery.md  ontology-provenance-events.md  paper-discovery.md  redis-architectural-impact.md  redis-architecture-design.md  redis-event-store-feasibility.md  review-extraction-llm-techniques.md  review-extraction-ontology-guided.md  review-extraction-production-pipelines.md  user-behavior-graph-architecture.md  user-personalization-discovery.md  user-preference-modeling.md
docs/review/: coherence-crossrefs.md  coherence-data-store.md  coherence-graph-schema.md  coherence-ontology.md  coherence-pipeline.md
fly/: deploy.sh  neo4j.toml  redis.toml
sdk/engram/: pyproject.toml
sdk/engram-crewai/: pyproject.toml
sdk/engram-crewai/src/engram_crewai/: __init__.py  storage.py
sdk/engram-crewai/tests/: conftest.py  test_storage.py
sdk/engram-langchain/: pyproject.toml
sdk/engram-langchain/src/engram_langchain/: __init__.py  callback.py  history.py  retriever.py
sdk/engram-langchain/tests/: conftest.py  test_callback.py  test_history.py  test_retriever.py
sdk/engram-mcp/: pyproject.toml
sdk/engram-mcp/src/engram_mcp/: __init__.py  server.py  tools.py
sdk/engram-mcp/tests/: conftest.py  test_concurrency.py  test_injection.py  test_resilience.py  test_security.py  test_tools.py
sdk/engram/src/engram/: __init__.py  client.py  config.py  exceptions.py  models.py  pagination.py  sessions.py  simple.py  sync_client.py  templates.py  transport.py
sdk/engram/tests/: conftest.py  test_client.py  test_concurrency.py  test_config.py  test_exceptions.py  test_injection.py  test_models.py  test_pagination.py  test_resilience.py  test_security.py  test_sessions.py  test_simple.py  test_sync_client.py  test_transport.py
sdk/kg-memory-mcp/: pyproject.toml
sdk/kg-memory-mcp/src/kg_memory/: __init__.py  extraction.py  graph.py  persistence.py  reconciliation.py  retrieval.py  server.py  tools.py  watcher.py
sdk/kg-memory-mcp/src/kg_memory/indexers/: __init__.py  adr_indexer.py  config_indexer.py  python_indexer.py
sdk/kg-memory-mcp/tests/: test_extraction.py  test_graph.py  test_persistence.py  test_reconciliation.py  test_retrieval.py
src/context_graph/: metrics.py  settings.py
tests/: conftest.py
tests/benchmark/: README.md  conftest.py  test_compaction.py  test_e2e_latency.py  test_neo4j_reads.py  test_neo4j_writes.py  test_projection_throughput.py  test_redis_ingestion.py  test_scaled_reads.py
tests/e2e/: test_e2e_consolidation.py  test_e2e_enrichment.py  test_e2e_health.py  test_e2e_ingestion.py  test_e2e_observability.py  test_e2e_performance.py  test_e2e_resilience.py  test_e2e_retrieval.py  test_e2e_security.py  test_e2e_users.py  test_lifecycle.py
tests/eval/: FINDINGS.md  TASK.md  autoresearch.py  autoresearch_v2.py  dataset.py  dataset_generated.json  generate_dataset.py  harness.py  hooks.py  program.md  run_eval.py  runner.py  test_dataset_scaling.py
tests/fixtures/: events.py
tests/infra/: test_neo4j.py  test_redis.py
tests/integration/: test_archive_lifecycle.py  test_consolidation.py  test_forgetting.py  test_neo4j_queries.py  test_neo4j_store.py  test_orphan_lifecycle.py  test_redis_store.py  test_user_queries.py
tests/unit/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_events.py  test_api_health.py  test_api_query.py  test_api_users.py  test_archive.py  test_circuit_breaker.py  (+52 more)
(+172 files in other folders)
