[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-crewai"
version = "0.1.0"
description = "CrewAI integration for Engram context graph"
requires-python = ">=3.11"
dependencies = [
    "engram>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/engram_crewai"]
